--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/data"]
-	path = src/data
+[submodule "modules/data"]
+	path = modules/data
 	url = https://github.com/dzitkowskik/time-series-data-manager.git
