--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,2 @@
-MB_SIZE_IN_BYTES = 1048576
-MAIN_STORE_SIZE = 136870912
-GPU_MEMORY_ALLOC_ATTEMPTS = 6
-STREAMS_NUM_QUERY = 4
-STREAMS_NUM_UPLOAD = 4
-STORE_BUFFER_CAPACITY = 512
-INSERT_THREAD_POOL_SIZE = 2
-SELECT_THREAD_POOL_SIZE = 6
-SIMUL_QUERY_COUNT = 4
-MASTER_IP_ADDRESS = 127.0.0.1
-MASTER_LOGIN_PORT = 8080
-ENABLE_COMPRESSION = 1
-MAX_JOB_MEMORY_SIZE = 10485760
+TEST_DATA_LOG = sample_data/info.log
+BENCHMARK_DATA_LOG = sample_data/info.log
