first test with real data from NYSE openbook

--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,3 @@
 TEST_DATA_LOG = sample_data/info.log
 BENCHMARK_DATA_LOG = sample_data/info.log
+NYSE_DATA_1GB = /media/ghash/OTHER/Dane/EQY_US_NYSE_BOOK_20130403/openbookultraMM_N20130403_1_of_1
