add docs and generated header, delete info.inf

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ gpuStore
 build/
 config.ini
 sample_data/nyse.*
+sample_data/generated.inf
+sample_data/generated.csv
+sample_data/infoWithErrors.inf
 
 ### OSX ###
 .DS_Store
