--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "modules/data"]
 	path = modules/data
 	url = https://github.com/dzitkowskik/time-series-data-manager.git
+[submodule "modules/unittest"]
+	path = modules/unittest
+	url = https://github.com/google/googletest.git
