--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "modules/unittest"]
 	path = modules/unittest
 	url = https://github.com/google/googletest.git
+[submodule "modules/benchmark"]
+	path = modules/benchmark
+	url = https://github.com/google/benchmark.git
