--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 sample_data/*.inf filter=lfs diff=lfs merge=lfs -text
 sample_data/*.log filter=lfs diff=lfs merge=lfs -text
+sample_data/*.csv filter=lfs diff=lfs merge=lfs -text
